Update time_series_analysis (PR) - Final.ipynb

--- a/Starter_Code/time_series_analysis (PR) - Final.ipynb
+++ b/Starter_Code/time_series_analysis (PR) - Final.ipynb
@@ -1613,7 +1613,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Although the volatility seems high I would still consider investing given there seems to be a upward trend in the yen future price. Given the volatility is expected to increase, the risk seems highers. Yes these seem like strong trading model and I would use them in conjuction with long term forecasting data."
+    "## Although the volatility seems high I would still consider investing given there seems to be a upward trend in the yen future price. Given the volatility is expected to increase, the risk seems higher. Yes, these seem like strong trading models and I would use them in conjuction with long term forecasting data."
    ]
   }
  ],
